--- a/index.html
+++ b/index.html
@@ -52,19 +52,14 @@
   font-size: 12px;
   cursor: default;
 }
-</style><script role="script" id="twine-user-script" type="text/twine-javascript">span.support:focus::before {
-   display: block;
-}
-</script><tw-passagedata pid="1" name="Start" tags="" position="400,175" size="100,100">
-  &lt;article style=&quot;position: relative;&quot;&gt;
-    &lt;div class=&quot;&quot; style=&quot;&quot;&gt;&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/SNdrVQ1/image.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="" position="400,175" size="100,100">
+ &lt;center&gt;&lt;img src=&quot;https://i.ibb.co/SNdrVQ1/image.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
 &lt;article&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;Добро пожаловать в проект Сансара. Устраивайтесь поудобнее и ощутите комфорт, удовольствие и азарт в круговороте перерождений.&lt;br&gt;&lt;Br&gt;
 &lt;center&gt;&lt;a&gt;&lt;b&gt;[[Н А Ч А Т Ь|Gang1]]&lt;/b&gt;&lt;/a&gt;&lt;/center&gt;
-&lt;/font&gt;&lt;/div&gt;
-  &lt;/article&gt;</tw-passagedata><tw-passagedata pid="2" name="Gang1" tags="" position="500,325" size="100,100">
-  &lt;article style=&quot;position: relative;&quot;&gt;
-    &lt;div class=&quot;&quot; style=&quot;&quot;&gt;&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/K6S4LCS/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
-&lt;article&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;Лютер оценил жизнь Алисы в тринадцать микросхем. Кто-то скажет, что это вполне себе неплохой обмен, но должен заметить, что когда всё кончится, а ночь рано или поздно сменится пусть хмурым, но днём, эти слова ему придётся выплевывать вместе с кровью.
+&lt;/font&gt;
+</tw-passagedata><tw-passagedata pid="2" name="Gang1" tags="" position="500,325" size="100,100">
+&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/K6S4LCS/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
+&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;Лютер оценил жизнь Алисы в тринадцать микросхем. Кто-то скажет, что это вполне себе неплохой обмен, но должен заметить, что когда всё кончится, а ночь рано или поздно сменится пусть хмурым, но днём, эти слова ему придётся выплевывать вместе с кровью.
 Я бегу. Так быстро, как только может бежать старый коп. Дыхание давно сбилось, и каждый выдох отдаётся болью в груди. Пистолет налился весом, и держать его с каждым новым движением становится все сложнее. Работа в полицейском департаменте Тантал-сити – это всегда куча проблем и мало денег. Но похищать мою внучку – это перебор, и за это кое-кому придется заплатить жизнью.&lt;br&gt;
 Вскидываю правую руку и стреляю. Запах пороха бьет в нос. Тяжелая гильза стукнулась о мокрый асфальт. Выстрел разрезает уличную тишину, больно отдает в плечо. Но это неважно. Главное, что дрожь в пальцах не смогла мне помешать. Моя цель получает пулю в ногу, хватается за нее и валится на тротуар с громким и жалобным всхлипом. Не спешу щелкать предохранителем, слегка сбавляю темп. Мерзавец ползёт, стиснув зубы, и получает от меня пулю во вторую ногу. Отвечает криком, которым спугивает черную кошку, сжавшуюся в комок у мусорного бака. В этом не было нужды, но, видит бог, он заслужил.&lt;br&gt;
 - Детектив, - он поднимает голову.&lt;br&gt;
@@ -73,11 +68,8 @@
 Его зовут Рекс. Идиотская кличка. Синтезоид. Прочел досье, пока ждал, когда он выйдет из дома. Мелкая сошка, с которой я бы вряд ли пересекся в других обстоятельствах. Косит взгляд на дуло пистолета и дрожит, понимая, что в любую секунду оно может вспыхнуть. Палец ласкает курок. Многие любят мою работу именно за такие моменты.
 &lt;br&gt;&lt;Br&gt;
 &lt;center&gt;&lt;a&gt;&lt;b&gt;[[УВЕСТИ ЕГО В ПОДВОРОТНЮ|Gang2]]&lt;/b&gt;&lt;/a&gt;&lt;/center&gt;
-&lt;/font&gt;&lt;/div&gt;
-  &lt;/article&gt;</tw-passagedata><tw-passagedata pid="3" name="Gang2" tags="" position="500,475" size="100,100">
-  &lt;article style=&quot;position: relative;&quot;&gt;
-    &lt;div class=&quot;&quot; style=&quot;&quot;&gt;&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/K6S4LCS/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
-&lt;article&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;Разговор обещает быть долгим, и мне претит мысль, что кто-нибудь сможет его прервать, поэтому я хватаю Рекса за волосы и тащу за собой в темный переулок. Он едва поспевает ползти на четвереньках, скуля и жалобно всхлипывая. Но понимает, что спорить со мной сейчас — это плохая идея. По моей команде он замирает среди мусорных пакетов, стоит на коленях, заведя руки за голову:&lt;br&gt;
+&lt;/font&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="Gang2" tags="" position="500,475" size="100,100">&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/K6S4LCS/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
+&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;Разговор обещает быть долгим, и мне претит мысль, что кто-нибудь сможет его прервать, поэтому я хватаю Рекса за волосы и тащу за собой в темный переулок. Он едва поспевает ползти на четвереньках, скуля и жалобно всхлипывая. Но понимает, что спорить со мной сейчас — это плохая идея. По моей команде он замирает среди мусорных пакетов, стоит на коленях, заведя руки за голову:&lt;br&gt;
 - Что тебе надо, детектив? – он боится поднять глаза. – Это какой-то бред. Ты перешел черту, а я ведь ничего не сделал. Я в завязке уже два года. Чист как пятки младенца.&lt;br&gt;
 - Я в курсе, Рекс, успокойся, - пытаюсь перевести дыхание, не опуская пистолет. - Мы просто поговорим, у тебя не так много времени. В тебе две пули. Очевидно, прошли по касательной, но поверь, раны стоит обработать и перевязать. Иначе ты откинешься от сепсиса или от кровопотери. Или просто получишь еще одну пулю в лоб. Мы друг друга поняли?&lt;br&gt;
 Он кивает, закусив губу до крови.&lt;br&gt;
@@ -88,27 +80,18 @@
 - Тринадцать микросхем, разбросанных по Тантал-сити, такое условие игры, что предложил Лютер. И я готов в нее сыграть. Насколько я знаю, тебе известно, где и как их можно достать, - достаю из кармана плаща портативный анализатор и бросаю его Рексу на колени, - вбивай в него все – координаты, имена, условия. И вбивай быстрее, у меня не так много времени.
 &lt;br&gt;&lt;Br&gt;
 &lt;center&gt;&lt;a&gt;&lt;b&gt;[[ЗАКУРИТЬ|Gang3]]&lt;/b&gt;&lt;/a&gt;&lt;/center&gt;
-&lt;/font&gt;&lt;/div&gt;
-  &lt;/article&gt;</tw-passagedata><tw-passagedata pid="4" name="Gang3" tags="" position="500,625" size="100,100">
-  &lt;article style=&quot;position: relative;&quot;&gt;
-    &lt;div class=&quot;&quot; style=&quot;&quot;&gt;&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
+&lt;/font&gt;</tw-passagedata><tw-passagedata pid="4" name="Gang3" tags="" position="500,625" size="100,100">&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
 &lt;article&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;Пока его дрожащие пальцы стучат по сенсорной панели, я могу позволить себе немного отдыха. Извлекаю из кармана пачку «Green Grаss». К счастью, сигареты не промокли, а значит, они помогут мне скрасить пару минут. Сжал сигарету между зубов, щелкнул зажигалкой и запустил в легкие немного дыма.&lt;br&gt;
 Роняю пачку на асфальт. Старый дурак. Пускаю хлопья дыма в воздух и держу Рекса на прицеле – в этом городе никому нельзя доверять. Тем более тому, кому ты подарил парочку огнестрельных ранений. Наклоняюсь и чуть отхожу в сторону, чтобы поднять сигареты и в этот самый момент, Рекс неестественно дергает головой, пачкая красными брызгами стену, и валится на бетон. Я сразу же делаю кувырок, успевая заметить аккуратное красное отверстие в его лбу. Прячусь за мусорным баком, сжимаю пистолет, согнув руку в локте и понимаю, что стреляли с крыши, стрелял профессионал, стрелял в меня.&lt;br&gt;
 Новая пуля бьется о стену прямиком у меня над головой и застревает в кирпиче. Крупнокалиберная винтовка. Такая прорежет бак – мое вынужденное укрытие – как бумагу. Пульс снова участился. Хватаюсь за взбесившееся сердце. Виски сдавило, будто мою голову сжали в тисках. Едва живой и покрытый холодным потом достаю из внутреннего кармана пузырек и глотаю сразу несколько таблеток. Умирать рано, слишком рано.
 &lt;br&gt;&lt;Br&gt;
 &lt;center&gt;&lt;a&gt;&lt;b&gt;[[ПОПЫТАТЬСЯ РАЗГЛЯДЕТЬ СТРЕЛКА|Gang4-1]]&lt;/a&gt;&lt;/center&gt;
-&lt;/font&gt;&lt;/div&gt;
-  &lt;/article&gt;</tw-passagedata><tw-passagedata pid="5" name="Gang4-1" tags="" position="425,775" size="100,100">
-  &lt;article style=&quot;position: relative;&quot;&gt;
-    &lt;div class=&quot;&quot; style=&quot;&quot;&gt;&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
+&lt;/font&gt;</tw-passagedata><tw-passagedata pid="5" name="Gang4-1" tags="" position="425,775" size="100,100">&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
 &lt;article&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;Сперва я должен понять, кто пришел по мою душу. Вставляю в глаз сенсорный зрачок, после чего начинаю рыскать глазами по крышам домов. Он точно сидит там с винтовкой наперевес, обмотанный боеприпасами и рожденный только для того, чтобы я отправил его в ад. Едва успеваю опустить голову, над которой проносится пуля, врезавшаяся в оконную раму.&lt;br&gt;
 Я не хочу умирать так. Не хочу и не буду. Как сказал бы самурай, в такой смерти нет ни капли благородства. Наконец, у меня получается его засечь. Как я и думал, он на крыше соседнего дома. И это не человек и даже не синтезоид, если верить датчикам тепловизора. Винтовку крупного калибра держит в своих металлических лапах киборг, а это значит, что моя песенка, скорее всего, спета, разве что Арчи знает, что делать. Да, остается звонить Арчи, потому что иных вариантов нет. Он технарь и в целом хороший парень, слишком хороший для Тантал-сити, который его рано или поздно съест.
 &lt;br&gt;&lt;Br&gt;
 &lt;center&gt;&lt;a&gt;&lt;b&gt;[[ПОЗВОНИТЬ АРЧИ|Gang5-1]]&lt;/b&gt;&lt;/a&gt;&lt;/center&gt;
-&lt;/font&gt;&lt;/div&gt;
-  &lt;/article&gt;</tw-passagedata><tw-passagedata pid="6" name="Gang5-1" tags="" position="425,925" size="100,100">
-  &lt;article style=&quot;position: relative;&quot;&gt;
-    &lt;div class=&quot;&quot; style=&quot;&quot;&gt;&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
+&lt;/font&gt;</tw-passagedata><tw-passagedata pid="6" name="Gang5-1" tags="" position="425,925" size="100,100">&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
 &lt;article&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;- Алло, Арчи, - вставляю в ухо палец, чтобы заглушить шум раздающихся время от времени выстрелов, - у меня проблемы, и это мягко сказано, приятель. Что тебе известно о военизированных киборгах тринадцатой модели?&lt;BR&gt;
 - Тебя плохо слышно, - раздается вперемешку с глухим гулом из моего анализатора, - это что? Выстрелы? Что происходит?&lt;BR&gt;
 - Да, это выстрелы, не тупи, в меня сейчас стреляет киборг, модель которой я тебе назвал, мне нужна ее слабая сторона, любая, я хочу уйти из этой передряги живым. Иначе Лютер убьет Алису. Он сказал мне достать микросхемы, или он убьет ее, парень, уверен, ты тоже этого не хочешь.&lt;BR&gt;
@@ -125,10 +108,7 @@
 &lt;b&gt;[[Не ходить с покрытой головой по улице, хранить обет безбрачия, почитать родителей, защищать слабых, носить красную перевязь на поясе.|Gang5-1-0]]&lt;/b&gt;&lt;br&gt;
 &lt;b&gt;[[Не стричь волосы и бороду, носить кожаные шаровары, закалывать волосы гребнем, всегда иметь при себе меч, носить при себе железный браслет.|Gang5-1-1]]&lt;/b&gt;&lt;br&gt;
 &lt;/a&gt;&lt;/left&gt;
-&lt;/font&gt;&lt;/div&gt;
-  &lt;/article&gt;</tw-passagedata><tw-passagedata pid="7" name="Gang5-1-0" tags="" position="275,1075" size="100,100">
-  &lt;article style=&quot;position: relative;&quot;&gt;
-    &lt;div class=&quot;&quot; style=&quot;&quot;&gt;&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
+&lt;/font&gt;</tw-passagedata><tw-passagedata pid="7" name="Gang5-1-0" tags="" position="275,1075" size="100,100">&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
 &lt;article&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;&lt;font size=&quot;2&quot;&gt;&lt;font color=&quot;red&quot;&gt;Неправильный ответ. Согласно сикхизму, правилами “пяти К” являются кеш (не стричь волосы и бороду), качха (носить короткие кожаные шаровары, удобные в бою), кангха (закалывать волосы гребнем), кирпан (всегда иметь при себе меч или кинжал), кара (носить при себе железный браслет)&lt;/font&gt;&lt;/font&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;Я ввожу пароль, и панель загорается красным светом. Я ошибся. Смертельно ошибся, сейчас это слово подходит как никогда лучше, я замираю с анализатором в руке, чувствую, как он смотрит на меня через прицел, сейчас это закончится.&lt;br&gt;
 Три...&lt;/br&gt;
 Два...&lt;/br&gt;
@@ -137,10 +117,7 @@
 &lt;br&gt;&lt;Br&gt;
 &lt;center&gt;&lt;a&gt;&lt;b&gt;[[ПЕРЕРОДИТЬСЯ|Blog1]]&lt;/b&gt;&lt;br&gt;
 &lt;/a&gt;&lt;/center&gt;
-&lt;/font&gt;&lt;/div&gt;
-  &lt;/article&gt;</tw-passagedata><tw-passagedata pid="8" name="Gang5-1-1" tags="" position="1050,900" size="100,100">
-  &lt;article style=&quot;position: relative;&quot;&gt;
-    &lt;div class=&quot;&quot; style=&quot;&quot;&gt;&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;&lt;br&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;&lt;font size=&quot;2&quot;&gt;&lt;font color=&quot;green&quot;&gt;Правильный ответ. Согласно сикхизму, правилами “пяти К” являются кеш (не стричь волосы и бороду), качха (носить короткие кожаные шаровары, удобные в бою), кангха (закалывать волосы гребнем), кирпан (всегда иметь при себе меч или кинжал), кара (носить при себе железный браслет)&lt;/font&gt;&lt;/font&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
+&lt;/font&gt;</tw-passagedata><tw-passagedata pid="8" name="Gang5-1-1" tags="" position="1050,900" size="100,100">&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/QpBjf7M/1.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;&lt;br&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;&lt;font size=&quot;2&quot;&gt;&lt;font color=&quot;green&quot;&gt;Правильный ответ. Согласно сикхизму, правилами “пяти К” являются кеш (не стричь волосы и бороду), качха (носить короткие кожаные шаровары, удобные в бою), кангха (закалывать волосы гребнем), кирпан (всегда иметь при себе меч или кинжал), кара (носить при себе железный браслет)&lt;/font&gt;&lt;/font&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 &lt;article&gt;Как только я ввожу последнее слово, стрельба прекращается, в тот же момент с крыши падает что-то тяжелое и бьется о землю в метре от меня. Проклятье, это было близко, даже очень. Радует, что от моего врага осталась только груда металла, в таком виде он вряд ли мне угрожает.&lt;br&gt;
 - Арчи, - снова звоню технарю, - ты молодец, ты спас шкуру старого копа
 Раздается радостный вздох. Кажется, мальчик действительно за меня переживал. Не буду врать – это приятно и даже очень.&lt;br&gt;
@@ -149,8 +126,7 @@
 &lt;br&gt;&lt;Br&gt;
 &lt;center&gt;&lt;a&gt;&lt;b&gt; [[ИДТИ ДАЛЬШЕ | Gang-buddha]]&lt;/b&gt;&lt;br&gt;
 &lt;/a&gt;&lt;/center&gt;
-&lt;/font&gt;&lt;/div&gt;
-  &lt;/article&gt;</tw-passagedata><tw-passagedata pid="9" name="Blog1" tags="" position="300,1225" size="100,100">
+&lt;/font&gt;</tw-passagedata><tw-passagedata pid="9" name="Blog1" tags="" position="300,1225" size="100,100">
   &lt;article style=&quot;position: relative;&quot;&gt;
     &lt;div class=&quot;&quot; style=&quot;&quot;&gt;&lt;center&gt;&lt;img src=&quot;https://i.ibb.co/Nsv7f9z/2.png&quot; alt=&quot;step1&quot; border=&quot;0&quot;&gt;&lt;/a&gt;&lt;/center&gt;&lt;br&gt;
 &lt;article&gt;&lt;font face=&quot;Lucida Sans Unicode&quot;&gt;Всем приветик!!! Ожидание, котятки, это одна из самых плохих вещей мира!  Ты ждешь, ждешь, потом еще раз ждешь. Что может быть хуже? Мы с вами живем в мире, в котором все крутится, вертится, все куда-то спешат, и каждая минута может стоить очень и очень дорого. Мы все существуем в моменте, котятки, бежим друг за дружкой как белки в колесе. Поэтому смертельно важно быть в курсе всего того, что происходит в мире вокруг нас. Я, например, сейчас иду в один офис подписать рекламный контракт… Господи, котятки, пишу, и пальцы дрожат!!! Подписать рекламный контракт с Green grаss, аоаоаоаоао.&lt;br&gt;&lt;br&gt;
